--- a/cadastro.html
+++ b/cadastro.html
@@ -69,77 +69,59 @@ button:active{
 
   <input type="text" id="nome" placeholder="Nome completo">
   <input type="tel" id="telefone" placeholder="Telefone (com DDD)">
-  <input type="text" id="cpf" placeholder="CPF" maxlength="14">
 
   <button id="btnCadastrar">Finalizar cadastro</button>
 
   <div class="info">
     Este cadastro é feito apenas uma vez.<br>
-    Em novos acessos, utilize o login com CPF.
+    Em novos acessos, utilize o login com telefone.
   </div>
 </div>
 
-<!-- SUPABASE -->
+<!-- SUPABASE GLOBAL -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-const supabaseClient = supabase.createClient(
-  "https://msnqiiwcityikslikbow.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
-);
-</script>
+<script src="core/supabase.js"></script>
 
 <script>
 const nomeInput = document.getElementById("nome");
 const telInput = document.getElementById("telefone");
-const cpfInput = document.getElementById("cpf");
 const btn = document.getElementById("btnCadastrar");
-
-/* MÁSCARA CPF */
-cpfInput.addEventListener("input", () => {
-  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
-  cpfInput.value = v;
-});
 
 btn.addEventListener("click", cadastrar);
 
 async function cadastrar(){
   const nome = nomeInput.value.trim();
-  const telefone = telInput.value.trim();
-  const cpf = cpfInput.value.replace(/\D/g,"");
+  const telefone = telInput.value.replace(/\D/g,"");
 
-  if(!nome || !telefone || cpf.length !== 11){
-    alert("Preencha corretamente todos os campos");
+  if(!nome || telefone.length < 10){
+    alert("Preencha corretamente nome e telefone");
     return;
   }
 
-  /* Verifica se CPF já existe */
+  /* 🔎 Verifica se telefone já existe */
   const { data: existente, error: selectError } = await supabaseClient
     .from("usuarios")
     .select("id")
-    .eq("cpf", cpf)
+    .eq("telefone", telefone)
     .eq("tipo", "passageiro")
     .maybeSingle();
 
   if(selectError){
-    alert("Erro ao verificar CPF");
+    alert("Erro ao verificar cadastro");
     console.error(selectError);
     return;
   }
 
   if(existente){
-    alert("CPF já cadastrado. Use o login de passageiro.");
+    alert("Telefone já cadastrado. Use o login de passageiro.");
     window.location.href = "login-passageiro.html";
     return;
   }
 
   const novoUsuario = {
     tipo: "passageiro",
-    nome: nome,
-    telefone: telefone,
-    cpf: cpf,
+    nome,
+    telefone,
     ativo: true
   };
 
