--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -105,10 +105,9 @@ button:active{
     </div>
 
     <input
-      type="text"
-      id="cpf"
-      placeholder="Digite seu CPF"
-      maxlength="14"
+      type="tel"
+      id="telefone"
+      placeholder="Digite seu telefone (DDD)"
       autocomplete="off"
     >
 
@@ -127,58 +126,40 @@ button:active{
   </div>
 </div>
 
-<!-- SUPABASE -->
+<!-- SUPABASE GLOBAL -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-/* ⚠️ INSERIR AQUI SUA URL E SUA ANON KEY DO SUPABASE */
-const supabaseClient = supabase.createClient(
-  "https://msnqiiwcityikslikbow.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
-);
-</script>
+<script src="core/supabase.js"></script>
 
 <script>
-/* ================= REDIRECIONA SE JÁ LOGADO ================= */
+/* ================= AUTO-REDIRECT ================= */
 
 const usuarioLogado = JSON.parse(localStorage.getItem("usuarioRF"));
-
 if(usuarioLogado && usuarioLogado.tipo === "passageiro"){
   window.location.href = "dashboard-passageiro.html";
 }
 
 /* ================= ELEMENTOS ================= */
 
-const cpfInput = document.getElementById("cpf");
+const telInput = document.getElementById("telefone");
 const btn = document.getElementById("btnEntrar");
 const erro = document.getElementById("erro");
-
-/* ================= MÁSCARA CPF ================= */
-
-cpfInput.addEventListener("input", () => {
-  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
-  cpfInput.value = v;
-});
 
 /* ================= EVENTOS ================= */
 
 btn.addEventListener("click", loginPassageiro);
-
-cpfInput.addEventListener("keypress", e => {
+telInput.addEventListener("keypress", e=>{
   if(e.key === "Enter") loginPassageiro();
 });
 
-/* ================= LOGIN PASSAGEIRO ================= */
+/* ================= LOGIN ================= */
 
 async function loginPassageiro(){
   erro.style.display = "none";
 
-  const cpf = cpfInput.value.replace(/\D/g,"");
+  const telefone = telInput.value.replace(/\D/g,"");
 
-  if(cpf.length !== 11){
-    erro.innerText = "CPF inválido";
+  if(telefone.length < 10){
+    erro.innerText = "Telefone inválido";
     erro.style.display = "block";
     return;
   }
@@ -186,10 +167,10 @@ async function loginPassageiro(){
   const { data, error } = await supabaseClient
     .from("usuarios")
     .select("*")
-    .eq("cpf", cpf)
+    .eq("telefone", telefone)
     .eq("tipo", "passageiro")
     .eq("ativo", true)
-    .single();
+    .maybeSingle();
 
   if(error || !data){
     erro.style.display = "block";
@@ -199,12 +180,10 @@ async function loginPassageiro(){
   const usuario = {
     tipo: "passageiro",
     nome: data.nome,
-    telefone: data.telefone,
-    cpf: data.cpf
+    telefone: data.telefone
   };
 
   localStorage.setItem("usuarioRF", JSON.stringify(usuario));
-
   window.location.href = "dashboard-passageiro.html";
 }
 </script>
