--- a/dashboard-motorista.html
+++ b/dashboard-motorista.html
@@ -5,114 +5,59 @@
 <title>Motorista – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- PWA -->
-<link rel="manifest" href="./manifest.json">
-<meta name="theme-color" content="#D4AF37">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="RF Driver">
-<link rel="apple-touch-icon" href="./icons/192.png">
-
 <link rel="stylesheet" href="./theme/theme.css">
 
 <style>
-:root{
-  --gold:#D4AF37;
-  --gold-soft:#E6C97A;
-  --text:#444;
-}
-
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(18px)}
-  to{opacity:1;transform:translateY(0)}
-}
-
-@keyframes shine{
-  0%{background-position:-200%}
-  100%{background-position:200%}
-}
-
-@keyframes pulseGlow{
-  0%,100%{box-shadow:0 0 0 rgba(212,175,55,0)}
-  50%{box-shadow:0 0 28px rgba(212,175,55,.45)}
-}
-
 body{
-  background:radial-gradient(circle at top,#ffffff,#f2f2f2 60%,#eaeaea);
-  color:var(--text);
+  background:radial-gradient(circle at top,#ffffff,#f2f2f2);
+  font-family:Inter, Arial, sans-serif;
+  color:#222;
 }
-
 .page{
   min-height:100vh;
   display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
   padding:22px;
 }
-
 .box{
   width:100%;
   max-width:420px;
   display:flex;
   flex-direction:column;
-  gap:22px;
+  gap:20px;
 }
-
 .hero{
   text-align:center;
-  padding:34px 26px;
+  padding:30px;
   border-radius:26px;
-  background:linear-gradient(180deg,#ffffff,#f3f3f3);
-  border:1px solid rgba(212,175,55,.35);
+  background:#fff;
   box-shadow:0 12px 30px rgba(0,0,0,.08);
-  animation:fadeUp .7s ease;
 }
-
-.hero-title{
-  font-size:1.85rem;
-  font-weight:800;
-  letter-spacing:2px;
-  background:linear-gradient(120deg,var(--gold),var(--gold-soft),var(--gold));
-  background-size:200% auto;
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  animation:shine 6s linear infinite;
+.hero h1{
+  font-size:1.8rem;
+  color:#D4AF37;
+  font-weight:900;
 }
-
-.hero-sub{
-  margin-top:6px;
-  font-size:.9rem;
+.hero span{
+  font-size:.85rem;
   color:#666;
 }
-
-.trust{
-  margin-top:14px;
-  font-size:.75rem;
-  color:#777;
-  display:flex;
-  justify-content:center;
-  gap:10px;
-}
-
-.primary-action{
+button{
   padding:18px;
-  font-size:1.05rem;
-  font-weight:700;
   border-radius:18px;
-  background:linear-gradient(180deg,var(--gold-soft),var(--gold));
-  color:#000;
   border:none;
-  box-shadow:0 10px 20px rgba(212,175,55,.35);
-  animation:fadeUp .9s ease, pulseGlow 3s ease infinite;
+  font-weight:800;
+  font-size:1rem;
   cursor:pointer;
 }
-
-.secondary{
-  display:flex;
-  gap:12px;
+.primary{
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
 }
-
+.outline{
+  background:#fff;
+  border:1px solid #ccc;
+}
 .footer{
   text-align:center;
   font-size:.75rem;
@@ -127,59 +72,45 @@ body{
   <div class="box">
 
     <div class="hero">
-      <div class="hero-title">RF DRIVER</div>
-      <div class="hero-sub">Painel do motorista</div>
-
-      <div class="trust">
-        <span>🔒 Seguro</span>
-        <span>•</span>
-        <span>⭐ Profissional</span>
-        <span>•</span>
-        <span>🚗 Confiável</span>
-      </div>
+      <h1>RF DRIVER</h1>
+      <span id="nomeMotorista"></span>
     </div>
 
-    <button class="primary-action" id="btnIniciar">
+    <button class="primary" id="btnIniciar">
       ▶ Iniciar cálculo de corrida
     </button>
 
-    <div class="secondary">
-      <button class="btn btn-outline" onclick="abrirRegras()">
-        📋 Regras do motorista
-      </button>
-      <a class="btn btn-outline" href="instalar-app.html">
-        📲 Instalar App
-      </a>
-    </div>
+    <button class="outline" onclick="sair()">
+      🔒 Sair
+    </button>
 
     <div class="footer">
-      Ferramenta oficial para motoristas RF Driver
+      Painel do motorista
     </div>
 
   </div>
 </div>
 
-<script src="core/global.js"></script>
-
 <script>
-/* ================= PROTEÇÃO DE ACESSO ================= */
-
 const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
 
 if(!usuario || usuario.tipo !== "motorista"){
-  alert("Acesso restrito. Faça login como motorista.");
-  window.location.href = "login-motorista.html";
+  localStorage.clear();
+  window.location.href = "index.html";
 }
 
-/* ================= AÇÕES ================= */
+document.getElementById("nomeMotorista").innerText = usuario.nome;
 
 document.getElementById("btnIniciar").onclick = () => {
-  App.reset();
-  App.go("origem.html");
+  localStorage.removeItem("origem");
+  localStorage.removeItem("destino");
+  localStorage.removeItem("valorBase");
+  window.location.href = "origem.html";
 };
 
-function abrirRegras(){
-  window.location.href = "regras-motorista.html";
+function sair(){
+  localStorage.clear();
+  window.location.href = "index.html";
 }
 </script>
 
