Atualizar o admin-login.html

--- a/admin-login.html
+++ b/admin-login.html
@@ -11,58 +11,40 @@
 body{
   background:radial-gradient(circle at top,#ffffff,#f2f2f2);
   font-family:Inter, Arial, sans-serif;
-  color:#222;
 }
-
 .page{
   min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  padding:20px;
 }
-
 .card{
   background:#fff;
+  padding:28px;
+  border-radius:24px;
+  box-shadow:0 12px 30px rgba(0,0,0,.12);
   width:100%;
   max-width:360px;
-  padding:26px;
-  border-radius:22px;
-  box-shadow:0 10px 28px rgba(0,0,0,.12);
-  display:flex;
-  flex-direction:column;
-  gap:16px;
 }
-
-h1{
-  text-align:center;
-  font-size:1.4rem;
-  font-weight:900;
-}
-
+h1{text-align:center}
 input{
+  width:100%;
   padding:14px;
   border-radius:14px;
   border:1px solid #ccc;
-  font-size:.95rem;
+  margin-bottom:14px;
 }
-
 button{
+  width:100%;
   padding:14px;
-  border:none;
   border-radius:16px;
-  background:#d4af37;
+  border:none;
+  background:#D4AF37;
   font-weight:800;
-  cursor:pointer;
 }
-
-button:active{
-  transform:scale(.98);
-}
-
 .error{
-  color:#c62828;
   font-size:.8rem;
+  color:#c62828;
   text-align:center;
   display:none;
 }
@@ -74,50 +56,29 @@ button:active{
 <div class="page">
   <div class="card">
 
-    <h1>Administração</h1>
+    <h1>ADMIN</h1>
 
-    <input
-      id="cpf"
-      placeholder="CPF do administrador"
-      maxlength="14"
-      autocomplete="off"
-    >
-
+    <input id="cpf" placeholder="CPF do administrador" maxlength="14">
     <button id="btnEntrar">Entrar</button>
 
-    <div class="error" id="erro">
-      Administrador não autorizado
-    </div>
+    <div class="error" id="erro">Acesso não autorizado</div>
 
   </div>
 </div>
 
-<!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseClient = supabase.createClient(
   "https://msnqiiwcityikslikbow.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
+  "SUA_ANON_KEY_AQUI"
 );
-</script>
 
-<script>
-/* ================= AUTO-REDIRECT ================= */
-
-const adminLogado = JSON.parse(localStorage.getItem("adminRF"));
-if(adminLogado && adminLogado.tipo === "admin"){
-  window.location.href = "dashboard-admin.html";
-}
-
-/* ================= ELEMENTOS ================= */
+const GRUPO_ID = "f5b2eec4-f957-4648-8e4e-f5642159dd8c";
 
 const cpfInput = document.getElementById("cpf");
-const btn = document.getElementById("btnEntrar");
 const erro = document.getElementById("erro");
 
-/* ================= MÁSCARA CPF ================= */
-
-cpfInput.addEventListener("input", () => {
+cpfInput.addEventListener("input", ()=>{
   let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
   v = v.replace(/(\d{3})(\d)/,"$1.$2");
   v = v.replace(/(\d{3})(\d)/,"$1.$2");
@@ -125,24 +86,10 @@ cpfInput.addEventListener("input", () => {
   cpfInput.value = v;
 });
 
-/* ================= EVENTOS ================= */
-
-btn.addEventListener("click", loginAdmin);
-cpfInput.addEventListener("keypress", e=>{
-  if(e.key === "Enter") loginAdmin();
-});
-
-/* ================= LOGIN ADMIN ================= */
-
-async function loginAdmin(){
-  erro.style.display = "none";
+document.getElementById("btnEntrar").onclick = async ()=>{
+  erro.style.display="none";
 
   const cpf = cpfInput.value.replace(/\D/g,"");
-
-  if(cpf.length !== 11){
-    erro.style.display = "block";
-    return;
-  }
 
   const { data, error } = await supabaseClient
     .from("usuarios")
@@ -150,22 +97,23 @@ async function loginAdmin(){
     .eq("cpf", cpf)
     .eq("tipo", "admin")
     .eq("ativo", true)
+    .eq("grupo_id", GRUPO_ID)
     .single();
 
   if(error || !data){
-    erro.style.display = "block";
+    erro.style.display="block";
     return;
   }
 
-  const admin = {
-    tipo: "admin",
-    nome: data.nome,
-    cpf: data.cpf
-  };
+  localStorage.setItem("usuarioRF", JSON.stringify({
+    tipo:"admin",
+    nome:data.nome,
+    id:data.id,
+    grupo_id:data.grupo_id
+  }));
 
-  localStorage.setItem("adminRF", JSON.stringify(admin));
   window.location.href = "dashboard-admin.html";
-}
+};
 </script>
 
 </body>
