--- a/login-motorista.html
+++ b/login-motorista.html
@@ -11,7 +11,6 @@
 body{
   background:radial-gradient(circle at top,#ffffff,#f2f2f2);
   font-family:Inter, Arial, sans-serif;
-  color:#222;
 }
 .page{
   min-height:100vh;
@@ -32,25 +31,19 @@ body{
   gap:18px;
 }
 .logo{text-align:center}
-.logo h1{
-  font-size:1.6rem;
-  font-weight:900;
-  letter-spacing:2px;
-  color:#D4AF37;
-}
+.logo h1{font-size:1.6rem;font-weight:900;color:#000}
+.logo span{font-size:.8rem;color:#666}
 input{
   width:100%;
   padding:14px;
   border-radius:16px;
   border:1px solid #ccc;
-  font-size:1rem;
 }
 button{
   padding:16px;
   border-radius:18px;
   border:none;
   background:linear-gradient(180deg,#E6C97A,#D4AF37);
-  font-size:1rem;
   font-weight:800;
   cursor:pointer;
 }
@@ -70,10 +63,10 @@ button{
 
     <div class="logo">
       <h1>MOTORISTA</h1>
-      <span>Login por CPF</span>
+      <span>Acesso autorizado</span>
     </div>
 
-    <input id="cpf" placeholder="Digite seu CPF" maxlength="14">
+    <input id="cpf" placeholder="CPF do motorista" maxlength="14">
     <button id="btnEntrar">Entrar</button>
 
     <div class="error" id="erro">Motorista não autorizado</div>
@@ -91,26 +84,15 @@ const supabaseClient = supabase.createClient(
 const GRUPO_ID = "f5b2eec4-f957-4648-8e4e-f5642159dd8c";
 
 const cpfInput = document.getElementById("cpf");
-const btn = document.getElementById("btnEntrar");
 const erro = document.getElementById("erro");
 
-/* máscara CPF */
-cpfInput.addEventListener("input", ()=>{
-  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
-  cpfInput.value = v;
+cpfInput.addEventListener("input", () => {
+  cpfInput.value = cpfInput.value.replace(/\D/g,"").slice(0,11);
 });
 
-btn.onclick = async ()=>{
-  erro.style.display="none";
-
-  const cpf = cpfInput.value.replace(/\D/g,"");
-  if(cpf.length !== 11){
-    erro.style.display="block";
-    return;
-  }
+document.getElementById("btnEntrar").onclick = async () => {
+  erro.style.display = "none";
+  const cpf = cpfInput.value;
 
   const { data, error } = await supabaseClient
     .from("usuarios")
@@ -122,20 +104,11 @@ btn.onclick = async ()=>{
     .single();
 
   if(error || !data){
-    erro.style.display="block";
+    erro.style.display = "block";
     return;
   }
 
-  localStorage.setItem("usuarioRF", JSON.stringify({
-    tipo: "motorista",
-    id: data.id,
-    nome: data.nome,
-    cpf: data.cpf,
-    placa: data.placa,
-    modelo: data.modelo_carro,
-    grupo_id: data.grupo_id
-  }));
-
+  localStorage.setItem("usuarioRF", JSON.stringify(data));
   window.location.href = "dashboard-motorista.html";
 };
 </script>
